src/styles.css
* {
  border: 1px solid transparent;
  margin-bottom: 0;
}

.small-website{
  display: none;
}

.regular-website{
  display:block;
}

@media only screen and (max-device-width: 1450px) {
  .regular-website{
    display:none;
  }
  .small-website{
    display:block;
  }
  
  * {
    border: 0px;
    margin-bottom: 0;
  }
}

@media only screen and (min-width: 1451px) {  
  .regular-website{
    display:block;
  }
  .small-website{
    display:none;
  }
}

html {
  height: max-content;
  margin: 0 auto;
}

div.search-input {
  zoom: 200%;
  width: 35rem;
}

#humidity, #wind{
  margin: 2rem;
  color: #faffff;
  font-family: "Fredoka One", cursive;
  letter-spacing: 2px;
}

a {
  text-decoration: none;
  color: #faffff;
  transition: all 200ms ease-in-out;
}

body {
  height: 100%;
  background-repeat: no-repeat;
  background-image: linear-gradient(#8b9da9, #fff6e4);
  box-shadow: inset 0 0 0px hsla(0,0%,0%,.3);
  margin-top: 0px;
  margin-left: 0px;
  margin-bottom: 10rem;
  padding: 0;
  background-attachment: fixed;
  zoom: 60%;
  overflow:hidden;
}



button.btn-search {
  border-radius: 0 10px 10px 0;
}

button.user-location {
  position: relative;
  left: 1rem;
  border-radius: 30px;
}

div.temp-up {
  position: relative;
  top: -4rem;
}

div.date-down {
  position: relative;
  top: 4rem;
}

#displayed-city-name {

  position: relative;
  width:430px;
  border-radius: 20px;
  margin-left: 5rem;
  margin-top: 1rem;
  text-transform: uppercase;
  padding: 1.1rem;
  font-family: "Merriweather Sans", sans-serif;
  font-weight: 700;
  letter-spacing: 3px;
  font-size: 45px;
  color: rgb(89, 92, 95, 0.4);
  background-color: rgb(250, 255, 255, 1.2);
  box-shadow: 1px 1px 0 1px #f9f9fb, 5px 0 4px 0 rgb(89, 92, 95, 0.1), 8px -12px 0px  rgb(89, 92, 95, 0.1);
  transform: rotateZ(5deg);
}

#date{
  font-size: 35px;
  border-radius: 20px;
  color: #faffff;
  font-family: "Merriweather Sans", sans-serif;
  font-weight: 700;
  text-align: center;
  letter-spacing: 5px;
}

#humid-icon, #wind-icon {
  color: #faffff;
}

.forecast-cell {
  background: rgb(130, 235, 174, 0.05);
  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.1);
  backdrop-filter: blur(4px);
  -webkit-backdrop-filter: blur(4px);
  border-radius: 30px;
  color: rgb(250, 255, 255);
  width: max-content;
  transition: 0.4s ease-in-out transform, 0.4s ease-in-out;
}

.forecast-cell:hover {
  transform: translate3d(0px, -16px, 0px);
  box-shadow:  -1px 0 28px 0 rgba(34, 33, 81, 0.01),
    54px 54px 28px -10px rgba(43, 42, 65, 0.1);
}

div.moving-main-icon {
  position: relative;
}

#description-text{
  font-size: 125px;
  color:  rgba(249, 249, 249, 0.3);
  /*
  padding: 3rem;*/
  text-transform: capitalize;
  
}

#description-block {
  border-radius: 20px;
  padding: 0.5rem;
  width: max-content;
  transform: rotateX(10deg) rotateY(21deg);
  position: relative;
  top: 1rem;
}

#today-temp{
  font-size: 120px;
  color: #faffff;
  background-color: rgb(89, 92, 95, 0.08);
  border-radius: 20px;
  font-family: "Open Sans", sans-serif;
  max-width: 50rem;
  text-align: center;
}

p.temp {
  font-size: 30px;
}

#forecastCells {
  position: relative;
  width: 30rem;
  margin-top: 1rem;
  transform: rotateX(57deg) rotateZ(56deg);
  transition: 0.4s ease-in-out transform, 0.4s ease-in-out box-shadow;
}


div.moving-next-days {
  transform: rotateZ(4deg) rotateY(-48deg) rotateX(55deg);
  position: relative;
}

div.next-day-edit {
  max-width: 400px;
}

#forecastIcon {
  font-size: 50px;
  
}

p.five-days {
  position: relative;
  top: 18rem;
  letter-spacing: normal;
  writing-mode: vertical-rl;
  text-orientation: mixed;
  transform: rotate(180deg);
}

#weather-icon {
  font-size: 280px;
  margin: 2rem 0 0rem 12rem;
  color: rgb(250, 255, 255, 0.6);
  text-shadow: 
      -1px -1px 1px rgb(89, 92, 95, 0.7), 
      2px 2px 1px rgb(54, 54, 54, 0.3);
  
}

div.main-card-temperature {
  position: relative;
  width: 8rem;
}

div.main-temperature {
  position: relative;
  top: 2rem;
  width: 15rem;
  transform: rotateX(20deg) rotateY(-45deg);
}

div.date {
  position: relative;
  top: 5rem;
  transform: rotateX(20deg) rotateY(-45deg);
}

div.main-temperature-container {
  position: relative;
  top: 5rem;
  transform: rotateX(20deg) rotateY(-45deg);
}

div.space-temp {
  padding: 3rem;
}

div.space-date {
  padding: 2rem;
}

h1.number-main-temperature {
  font-size: 140px;
}

#one {
  font-size: 30px;
  min-width:120px; 
  min-height:60px;
}

#max{
  font-size: 30px;
}

div.main-precipitation {
  position: relative;
  width: 11rem;
  padding: 0 0 0 0;
  transform: rotateX(20deg) rotateY(-45deg);
}

p.content-precipitation {
  font-size: 30px;
}

#celcius, #fahrenheit {
  margin: 1rem 2rem 1rem 1rem;
  width: 6rem;
  font-size: 35px;
  font-family: "Merriweather Sans", sans-serif;
  font-weight: 700;
  color: #faffff;
}

button.fahrenheit {
  position: relative;
  left: -2rem;
  width: 5rem;
  font-size: 30px;
  transform: rotateX(20deg) rotateY(-45deg);
}

#forecastCells{
  color:white
}

body{
  background-repeat:no-repeat;
  min-height: 100%;
  background-position: 100%;
  background-size: cover;
}

#wordcloud-canvas{
  text-align:center;
  margin:auto; 
}
 
@-webkit-keyframes fadeIn { from { opacity:0;  -webkit-transform: scale(0.1);} to { opacity:1;  -webkit-transform: scale(1.0);} }
@-moz-keyframes fadeIn { from { opacity:0;  -webkit-transform: scale(0.1);} to { opacity:1; -webkit-transform: scale(1.0); } }
@keyframes fadeIn { from { opacity:0; -webkit-transform: scale(0.1); } to { opacity:1; -webkit-transform: scale(1.0); } }

.fade-in {
	opacity:0;  
	-webkit-animation:fadeIn  cubic-bezier(0.585, 0.070, 0.455, 1)  1;  
	-moz-animation:fadeIn  cubic-bezier(0.585, 0.070, 0.455, 1)  1;
	animation:fadeIn  cubic-bezier(0.585, 0.070, 0.455, 1) 1;

	-webkit-animation-fill-mode:forwards;  
	-moz-animation-fill-mode:forwards;
	animation-fill-mode:forwards;
  
  -webkit-animation-duration:1.3s;
	-moz-animation-duration:1.3s;
	animation-duration:1.3s;
  
  -webkit-animation-delay:1.3s;
	-moz-animation-delay:1.3s;
	animation-delay:1.3s; 
}

#wordcloud-cities{
  opacity:0.7;
}

.video-container {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 100%; 
  overflow: hidden;
}
.video-container video {
  min-width: 100%; 
  min-height: 100%; 
  width: auto;
  height: auto;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%,-50%);
}

